--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+DateTime==5.5
 Flask==3.0.3
 flask-apispec==0.11.4
 Flask-Cors==5.0.0
@@ -25,13 +26,17 @@ MarkupSafe==3.0.2
 marshmallow==3.23.1
 multidict==6.1.0
 packaging==24.2
+persiantools==5.1.0
 propcache==0.2.0
 psycopg2==2.9.10
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
+setuptools==75.5.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 urllib3==2.2.3
 webargs==8.6.0
 Werkzeug==3.1.3
 yarl==1.17.1
+zope.interface==7.1.1
