--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 setuptools==75.5.0
+six==1.16.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 urllib3==2.2.3
